typos in README

--- a/README
+++ b/README
@@ -2,8 +2,8 @@ Useless
 =======
 
 Useless is a Haskell Application Server. 
-It allows you to build, run and manage Applications that are written in Haskell.
-It currently only delivers HTTP/1.0 sites and is not quite standard compliance to HTTP, but current Webclients should be able to process responses from Useless applications.
+It allows you to build, run and manage applications that are written in Haskell.
+It currently only delivers HTTP/1.0 sites and is not quite standard compliance to HTTP, but current web clients should be able to process responses from Useless applications.
 
 ---
 
@@ -13,7 +13,7 @@ $ cabal install
 
 ---
 
-To build a Webapplication, just import Useless.
+To build a web application, just import Useless.
 Example:
 
 import Useless
