--- a/README
+++ b/README
@@ -23,8 +23,8 @@ main = do
   theServer <- register "/" (foobar "A String") theServer
   startServer 8080 theServer
 
-foobar :: String -> HTTPRequest -> IO HTTPResponse
-foobar s req = return HTTPResponse 
+foobar :: String -> UselessSite
+foobar s useless req = return HTTPResponse 
   { httpResStatus = 200
   , httpResHeader = []
   , httpResBody = "<!DOCTYPE html><html><head><title>"++ s ++"</title></head><body>You are using "++httpReqVersion req++", but I'm ignoring that, sorry :(</body></html>"
