Something in the README (?)

--- a/README
+++ b/README
@@ -16,15 +16,15 @@ $ cabal install
 To build a web application, just import Useless.
 Example:
 
-import Useless
+import Network.Useless
 
 main = do
   theServer <- initUseless
-  register "/" (foobar "A String") theServer
+  register theServer "/" (foobar "A String")
   startServer 8080 theServer
 
-foobar :: String -> HTTPRequest -> IO HTTPResponse
-foobar s req = return HTTPResponse 
+foobar :: String -> UselessSite
+foobar s useless req = return HTTPResponse 
   { httpResStatus = 200
   , httpResHeader = []
   , httpResBody = "<!DOCTYPE html><html><head><title>"++ s ++"</title></head><body>You are using "++httpReqVersion req++", but I'm ignoring that, sorry :(</body></html>"
